replaced aClass.newInstance() with aClass.getDeclaredConstructor().newInstance()